edit communication between layers